# urRemoteControl

./: CMakeLists.txt  package.xml
PS2/: PS2.ino
forceSRI/: CMakeLists.txt  package.xml
forceSRI/script/: sri_sensor.py
include/function/: Transformer.h  robot.h  ur_kine.h
include/omega/: HapticDevice.h  drdc.h
launch/: force_feedback.launch  force_sensor.launch  joystick.launch  passiveControl.launch
lib/: libdhd.so.3  libdrd.so.3
src/: demo.cpp  dragging.cpp  joycontrol.cpp  sphere.cpp  tracking.cpp  ur_autonomous.cpp
src/function/: Transformer.cpp  robot.cpp  ur_kine.cpp
src/omega/: HapticDevice.cpp  haptic_ros_driver.cpp
